# hack-nation

./: .env.example  .gitignore  CRITICAL_RISKS.md  PROJECT_PITCH_CONTEXT.md  README.md  TECH_PLAYBOOK.md  mlflow.db  problem-statement.txt  pyproject.toml  requirements.txt  test_planner.py  test_verify.py
configs/: capability_rules.yaml  indian_medical_terms.yaml
frontend/: app.js  explain.html  index.html  styles.css
hack-nation -final-files/: feature_report.docx
mlruns/0/: meta.yaml
mlruns/703565009114277240/: meta.yaml
mlruns/808785889248616530/: meta.yaml
mlruns/808785889248616530/019f6072154c4cd9aecaf4eaf050d0f6/: meta.yaml
mlruns/808785889248616530/dd138c2d6623413e8190a2e0927f8d57/: meta.yaml
notebooks/: 01_databricks_end_to_end.ipynb
outputs/: critical_deserts.parquet  deployment_recommendations.json  facilities_enriched.csv  facilities_enriched.parquet  pipeline_trace.jsonl  specialized_deserts.csv  specialized_deserts.parquet
scripts/: run_genie_task.py  run_pipeline.py
src/healthbricks_india/: __init__.py  api.py  config.py  dashboard_app.py  observability.py  pipeline.py  trace.py
src/healthbricks_india/agents/: __init__.py  extractor_agent.py  genie_orchestrator.py  multi_pass_extractor.py
src/healthbricks_india/analytics/: __init__.py  desert_detection.py
src/healthbricks_india/io/: data_loader.py
src/healthbricks_india/reasoning/: query_engine.py  (+1 more)
src/healthcare_intel/: api.py  config.py  dashboard_app.py  observability.py  pipeline.py  schemas.py  trace.py  utils.py
tests/: test_query_engine.py  test_trust_scorer.py
(+88 files in other folders)
